--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ body.dark .dark-mode-btn {
     <button onclick="clearOutput()">Clear</button>
   </div>
 
-  <div class="footer">© Lingot 2025</div>
+  <div class="footer">© Manik Roy 2025</div>
 </div>
 
 <script>
@@ -301,3 +301,4 @@ function toggleDarkMode() {
 </script>
 </body>
 </html>
+
